tests/netedit/basic/configs/netecfg/load/invalid/demands/log.netedit
Error: Cannot read file '/home/palcraft/.texttest/tmp/netedit.daily.basic.19Dec113136.2377/netedit.daily.basic/basic/configs/netecfg/load/invalid/demands/dummy.rou.xml'!
Error: Loading of /home/palcraft/.texttest/tmp/netedit.daily.basic.19Dec113136.2377/netedit.daily.basic/basic/configs/netecfg/load/invalid/demands/dummy.rou.xml failed.
Warning: Lane 'E4_0' is not connected from any incoming edge at junction 'J4'.
Warning: Lane 'E8_0' is not connected from any incoming edge at junction 'J7'.
Warning: Lane 'E4_0' is not connected from any incoming edge at junction 'J4'.
Warning: Lane 'E8_0' is not connected from any incoming edge at junction 'J7'.
